--- a/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell.csproj
+++ b/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell.csproj
@@ -49,20 +49,15 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BatteryModel.cs" />
-    <Compile Include="Chamber.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Recipe.cs" />
+    <Compile Include="Assets.cs" />
+    <Compile Include="Programs.cs" />
     <Compile Include="Request.cs" />
     <Compile Include="Scheduler.cs" />
-    <Compile Include="SubProgram.cs" />
-    <Compile Include="Tester.cs" />
     <Compile Include="ViewModel.cs" />
     <Page Include="MainControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Compile Include="Battery.cs" />
     <Compile Include="MainControl.xaml.cs">
       <DependentUpon>MainControl.xaml</DependentUpon>
       <SubType>Code</SubType>
