--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Doc/~$V5 design doc.pptx
 Doc/~$SW Develop Schedule.xlsx
 Doc/~$ change list.docx
 Doc/~$BC Lab Report V5 20190408.xlsm
+Doc/~$Test Cases.xlsx
