Adapted to MVVM

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Doc/~$SW Develop Schedule.xlsx
 Doc/~$ change list.docx
 Doc/~$BC Lab Report V5 20190408.xlsm
 Doc/~$Test Cases.xlsx
+Doc/~$UI Design.pptx
