--- a/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell.csproj
+++ b/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell.csproj
@@ -54,12 +54,36 @@
     <Compile Include="Model\Programs.cs" />
     <Compile Include="Model\Request.cs" />
     <Compile Include="Model\Scheduler.cs" />
-    <Compile Include="ViewModel.cs" />
-    <Page Include="MainControl.xaml">
+    <Page Include="View\AllBatteryModelsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\BatteryModelView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\MainWindowResources.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\MainControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Compile Include="MainControl.xaml.cs">
+    <Compile Include="ViewModel\AllBatteryModelsViewModel.cs" />
+    <Compile Include="ViewModel\CommandViewModel.cs" />
+    <Compile Include="ViewModel\BatteryModelViewModel.cs" />
+    <Compile Include="ViewModel\MainWindowViewModel.cs" />
+    <Compile Include="ViewModel\RelayCommand.cs" />
+    <Compile Include="ViewModel\ViewModelBase.cs" />
+    <Compile Include="ViewModel\WorkspaceViewModel.cs" />
+    <Compile Include="View\AllBatteryModelsView.xaml.cs">
+      <DependentUpon>AllBatteryModelsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\BatteryModelView.xaml.cs">
+      <DependentUpon>BatteryModelView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\MainControl.xaml.cs">
       <DependentUpon>MainControl.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
@@ -88,10 +112,7 @@
     </None>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ViewModel\" />
-    <Folder Include="View\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
