--- a/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell.csproj
+++ b/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell.csproj
@@ -57,7 +57,9 @@
     <Compile Include="ViewModel\AllBatteriesViewModel.cs" />
     <Compile Include="ViewModel\AllRequestsViewModel.cs" />
     <Compile Include="ViewModel\BatteryViewModel.cs" />
+    <Compile Include="ViewModel\ExecutorViewModel.cs" />
     <Compile Include="ViewModel\RequestViewModel.cs" />
+    <Compile Include="ViewModel\AllExecutorsViewModel.cs" />
     <Compile Include="View\AllChamberRecipesView.xaml.cs">
       <DependentUpon>AllChamberRecipesView.xaml</DependentUpon>
     </Compile>
@@ -105,6 +107,9 @@
     </Compile>
     <Compile Include="View\TesterView.xaml.cs">
       <DependentUpon>TesterView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\AllExecutorsView.xaml.cs">
+      <DependentUpon>AllExecutorsView.xaml</DependentUpon>
     </Compile>
     <Page Include="View\AllBatteriesView.xaml">
       <SubType>Designer</SubType>
@@ -216,6 +221,10 @@
     <Page Include="View\TesterView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\AllExecutorsView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <ItemGroup>
