--- a/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell.csproj
+++ b/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell.csproj
@@ -20,7 +20,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\output\BCLabManager\Shell\</OutputPath>
+    <OutputPath>..\..\output\BCLabManager\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
